<resources>
    <string name="app_name">Stock Manager</string>
    <string name="preference_file_name">App Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="products">Products</string>
    <string name="transactions">Transactions</string>
    <string name="p_amp_l"><![CDATA[P&L]]></string>
    <string name="limited_stocks">Limited Stocks</string>
    <string name="vendors">Vendors</string>
    <string name="purchase_entry">Purchase Entry</string>
    <string name="sales_entry">Sales Entry</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="sale_date">Sale Date</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="add_item">Add Item</string>
    <string name="stock_manager">Stock Manager</string>
    <string name="designed_by_sidhant_bidaliya">Designed by Sidhant Bidaliya</string>
    <string name="about_developer">About Developer</string>
    <string name="sidhant_bidaliya">SIDHANT BIDALIYA</string>
    <string name="graphic_era_deemed_to_be_university_n_b_tech_cse_5th_semester">GRAPHIC ERA DEEMED TO BE UNIVERSITY \n B.Tech CSE, 5th Semester</string>
    <string name="sidd_bidaliya2000_gmail_com">sidd.bidaliya2000@gmail.com</string>
    <string name="update">Update</string>
    <string name="no_limited_stock">No limited Stock</string>
    <string name="all_p_amp_l_statements_will_be_shown_here"><![CDATA[All P&L Statements will be shown here]]></string>
    <string name="no_products_available_in_the_store">No Products available in the Store.</string>
    <string name="no_transaction_till_now">No Transaction till now.</string>
    <string name="increase_your_network">Increase your network</string>
    <string name="customers">Customers</string>
    <string name="these_products_are_running_out_of_stock">These products are running out of Stock:</string>
    <string name="profit_amp_loss_of_every_transaction"><![CDATA[Profit & Loss of every transaction:]]></string>
    <string name="all_products_are_listed_below">All Products are listed below:</string>
    <string name="all_transactions_are_listed_below">All Transactions are listed below:</string>
    <string name="customer">Customer</string>
    <string name="date_time">Date|Time</string>
    <string name="our_bought_price">Our Bought Price:</string>
    <string name="rs_xxxxx">Rs.XXXXX</string>
    <string name="our_sold_price">Our Sold Price:</string>
    <string name="rs_yyyyy">Rs.YYYYY</string>
    <string name="profit">Profit:</string>
    <string name="rs">Rs.$$$$$</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="product">Product:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="xxxx">XXXX</string>
    <string name="name">Name</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="total">Total:</string>
    <string name="amount">Amount</string>
</resources>