<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/proName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/name"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/proQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/quantity"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/proPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/price"
        android:textColor="@color/textColor"/>

</LinearLayout>